--- a/Business/Business.csproj
+++ b/Business/Business.csproj
@@ -19,4 +19,8 @@
     <Folder Include="Concrete\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Entities\Entities.csproj" />
+  </ItemGroup>
+
 </Project>
