--- a/Presentation/Presentation.csproj
+++ b/Presentation/Presentation.csproj
@@ -21,4 +21,9 @@
     <ProjectReference Include="..\Entities\Entities.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+    <Folder Include="Models\" />
+  </ItemGroup>
+
 </Project>
